<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Confession!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="register_title">Register</string>
    <string name="register_mobile">Mobile</string>
    <string name="register_password">Password</string>
    <string name="register_re_password">Re Password</string>
    <string name="register_verify_code">VerifyCode</string>
    <string name="register_submit">Submit</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_title">Login</string>
    <string name="login_register">Register</string>
    
    <string name="confession_title">Confession</string>
    <string name="confession_mobile">To</string>
    <string name="confession_said">Say</string>
    <string name="confession_submit">Submit</string>
    
    <string name="confessions_received_title">Confessions Received</string>
     
    <string name="confession_detail_from">From</string>
    <string name="confession_detail_said">Said</string>
    <string name="confession_detail_ok">OK</string>
    
        <string name="main_create_confession">Create Confession</string>
    <string name="main_logout">Logout</string>
</resources>