<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="12dp" >

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/register_title"
        android:textSize="28sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp" >

            <TextView
                android:id="@+id/register_mobile_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_mobile"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/register_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp" >

            <TextView
                android:id="@+id/register_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp" >

            <TextView
                android:id="@+id/register_repassword_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_re_password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/register_repassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp" >

            <TextView
                android:id="@+id/register_verifcode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_verify_code"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/register_verifycode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/register_submit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_submit"
        android:textSize="20sp" />

</LinearLayout>